# FlexiDial-v1

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.yy
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/driver/audio/: app_sr.c  app_sr.h  audio.cpp  audio.h  web_socket.cpp  web_socket.h
main/driver/button/: button.cpp  button.h
main/driver/display/: display.c  display.h
main/driver/gyro/: gyro.c  gyro.h
main/driver/hid/: esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid.cpp  hid.h  hid_dev.c  hid_dev.h
main/driver/motor/: foc_knob.c  foc_knob.h  foc_knob_default.c  foc_knob_default.h  motor.cpp  motor.h
main/driver/power/: power.c  power.h
main/driver/rgb/: rgb.cpp  rgb.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
main/ui/events/: events.c  events.h
main/ui/fonts/: ui_font_china22.c  ui_font_day24.c  ui_font_time_num32.c
main/ui/images/: ui_img_bg_dial_png.c  ui_lamp_icon.c
main/ui/screens/: ui_FlexiDial.c  ui_about.c  ui_knob.c  ui_lamp.c  ui_main.c  ui_root.c  ui_set.c  ui_sleep.c
spiffs/webpage/: hello.html  root.html  set.html
